tests/invalid/comprehension_non_iterable/main.py
def run_case() -> None:
    x: int = 5

    y: list[int] = [i for i in x]

if __name__ == "__main__":
    run_case()
